--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2dfc8161ff.js" crossorigin="anonymous"></script>
-    <title>Web Speech API</title>
+    <title>Speech to text API</title>
 </head>
 <body>
     <div class="container">
         <div class="head">
-            <p>Text to Speech API</p>
+            <p>Speech to text API</p>
         </div>
         <form action="" class="form">
             <textarea name="" id="text-feild" cols="51" rows="10">
